2008-07-25  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        - fix crash due to re-entering purgeInactiveFontData() now that it is
          called by releaseFontData()

        Not testable in DumpRenderTree

        * platform/graphics/FontCache.cpp:
        (WebCore::FontCache::purgeInactiveFontData): Added a reentry guard.

2008-07-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam

        Test: security/set-form-autocomplete-attribute.html

        Part of the fix for <rdar://problem/6093281> - Improper handling of autocomplete

        The autocomplete attribute works on both <form> and <input> elements, but was not
        inherited properly when someone asked an <input> if it should autocomplete.

        I fixed this up based on the rules in the current WF2 spec so if the <input> element
        has its own autocomplete attribute set, it will follow that but otherwise it will
        inherit from its parent <form>

        * WebCore.base.exp:

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::init):
        (WebCore::HTMLInputElement::autoComplete):
        (WebCore::HTMLInputElement::parseMappedAttribute):
        * html/HTMLInputElement.h:
        (WebCore::HTMLInputElement::):

2008-07-25  Wouter Bolsterlee  <uws+webkit@xs4all.nl>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=20078
        [GTK] Use G_* macros instead of deprecated GTK_* macros in gtk2xtbin.h

        * plugins/gtk/gtk2xtbin.h:

2008-07-25  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam.

        Add workaround for a Leopard bug which causes webarchive/test-xml-stylesheet.xml to fail.

        * platform/network/mac/WebCoreURLResponse.mm:
        (-[NSURLResponse _webcore_MIMEType]):

2008-07-25  chris fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin

        <rdar://problem/6084806> AX: REGRESSION: returned line number from TextArea is incorrect
