@@ -161,6 +161,7 @@ public:
 
 private:
     QBrush oldBrush;
+    bool oldAntialiasing;
 
     Q_DISABLE_COPY(StylePainter)
 };
